fixed the nav and the header in the html and css, I used flexbox to get the icons and the text aligned properly

--- a/trusat/docs/header.css
+++ b/trusat/docs/header.css
@@ -1,6 +1,5 @@
-body > div h2 {
+.catalog {
   font-family: Montserrat;
-  font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 49px;
@@ -8,4 +7,28 @@ body > div h2 {
   text-decoration: none;
   text-transform: uppercase;
   padding-block-start: 3rem;
+}
+section:nth-of-type(1) nav ul {
+  display: grid;
+  grid-template-columns: repeat( 6, 145px);
+  column-gap: 15px;
+  row-gap: 30px;
+  border-bottom: gray 1px solid;
+  padding: 0;
+}
+.more_headers {
+  list-style: none;
+  font-family: Montserrat;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
+
+.more_headers a {
+  text-decoration: none;
+  color: grey;
+}
+#priority {
+  color: #ffff;
 }
