--- a/trusat/docs/main.css
+++ b/trusat/docs/main.css
@@ -1,43 +1,4 @@
-
-main section:nth-of-type(1) header nav ul {
-  display: grid;
-  grid-template-columns: repeat( 6, 145px);
-  column-gap: 15px;
-  row-gap: 30px;
-  border-bottom: gray 1px solid;
-  padding: 0;
-}
-main section:nth-of-type(1) header nav h3  a {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-section:nth-of-type(1) header nav li:nth-of-type(2),
-section:nth-of-type(1) header nav li:nth-of-type(3),
-section:nth-of-type(1) header nav li:nth-of-type(4),
-section:nth-of-type(1) header nav li:nth-of-type(5) {
-  padding-block-start: 1.25rem;
-}
-
-main:nth-of-type(1) header nav > ul li {
-  list-style: none;
-}
-main section:nth-of-type(1) header nav li > a {
-font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 20px;
-letter-spacing: 0.05em;
-text-transform: uppercase;
-color: #FFFFFF;
-opacity: 0.5;
-}
-main div p:nth-of-type(1) {
+.first_paragraph {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 300;
@@ -46,7 +7,7 @@ main div p:nth-of-type(1) {
   width: 753px;
   height: 61px;
 }
-main div p:nth-of-type(2) {
+.second_paragraph {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -56,7 +17,7 @@ main div p:nth-of-type(2) {
   width: 755px;
   height: 38px;
 }
-main nav ul .par {
+/* main nav ul .par {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -74,5 +35,4 @@ main nav ul .num {
   line-height: 28px;
   display: flex;
   align-items: flex-end;
-}
-
+} */
